# autoresearch-iop

./: .gitignore  CLAUDE.md  LICENSE  README.md  analyze.py  autoresearch.py  prepare.py  program.md  pyproject.toml  requirements.txt  run_experiment.py
.github/workflows/: ci.yml
core/: data_loader.py  decomposition.py  inequality_measures.py  specification.py  types.py
data/: codebook.json
docs/: pipeline.html
evaluation/: diagnostics.py  metrics.py
imputation/: mice_imputer.py
methods/: ml_methods.py  nonparametric.py  parametric.py
orchestration/: coverage_tracker.py  experiment_log.py  strategy.py
results/tables/: by_circ_set.md  by_circ_set.tex  by_circumstances.md  by_circumstances.tex  by_sample.md  by_sample.tex  method_measure.tex  method_sensitivity.md  method_sensitivity.tex
synthesis/: figures.py  spec_curve.py  summary_tables.py
tests/: conftest.py  test_data_loader.py  test_decomposition.py  test_end_to_end.py  test_imputation.py  test_inequality_measures.py  test_ml_methods.py  test_spec_validation.py
